# lol

./: dict.json  flake.nix  hello.cabal
app/: Main.hs
nix/: hix.nix
src/: Color.hs  ColorTheme.hs  ColorX11.hs  Dict.hs  Dict2.hs  Dict2Read.hs  Variadic.hs  hello.hs
test/: Spec.hs
test/Hello/Color/: Tests.hs
test/TestSuite/: Util.hs
