cabal-version: 3.0

name: hello
version: 1.0.0.2


source-repository head
  type:     darcs
  location: http://darcs.haskell.org/hello/

flag threaded
  default: False

executable hello
  hs-source-dirs: src
  main-is: hello.hs
  build-depends:
    base >= 4.16 && < 5,
    containers,
    text,
    mtl,
    comonad,
    bytestring,
    aeson

  if flag(threaded)
     ghc-options: -threaded
