cabal-version: 3.0

name: hello
version: 1.0.0.0

common common-all
    build-depends:
        base >=4.16 && <5,
        containers,
        text,
        mtl,
        comonad,
        bytestring,
        aeson

    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import: common-all
    exposed-modules:  ColorTheme
                    , ColorX11
                    , Color
    hs-source-dirs:   src

executable hello
    import: common-all
    main-is: Main.hs
    hs-source-dirs: app, src
    other-modules:
        ColorTheme,
        ColorX11,
        Color

test-suite hello-test
    import: common-all
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Hello.Color.Tests,
        TestSuite.Util,
        ColorTheme,
        ColorX11,
        Color
    hs-source-dirs:
        src, test
    build-depends:
        , tasty
        , tasty-hunit
